--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "build": "vite build && pwsh ./post-bundle.ps1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.0",
     "@types/chrome": "^0.1.4",
     "typescript": "^5.9.2",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0"
   }
 }
