--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,14 @@
 {
   "manifest_version": 3,
   "name": "DOM Descendant Counter",
-  "version": "2.0",
+  "version": "0.2.0",
   "description": "Shows recursive descendant counts for selected HTML elements in DevTools.",
   "devtools_page": "devtools.html",
+  "icons": {
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
+    "128": "assets/logo.png"
+  },
   "background": {
     "service_worker": "background.js"
   },
